# cockpit-guardian

./: .editorconfig  .gitattributes  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md  repository.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  ASSETS.md  CONFIG_BACKUP.md  DEVICE_CATALOG.md  INTEGRATION_NOTICES.md  RELEASE_PROCESS.md  REPOSITORY_SETUP.md  USB_SPEED.md  VENDOR_API_NOTICES.md  WINDOWS_INSTALLER.md
packaging/windows/: CockpitGuardian.iss  build_installer.ps1
src/cockpit_guardian/: __init__.py  app.py  check_engine.py  config_manager.py  controller.py  logging_service.py  models.py  paths.py
src/cockpit_guardian/assets/: __init__.py  device_catalog.json
src/cockpit_guardian/services/: __init__.py  com_manager.py  device_catalog.py  device_detector.py  directinput.py  game_controller_properties.py  integration_notices.py  joystick_manager.py  restore_engine.py  simhub.py  software_detector.py  telemetry.py  usb_health.py  usb_speed_scanner.py  usb_topology.py  windows_util.py
src/cockpit_guardian/ui/: assets.py  main_window.py  theme.py  tray.py
tests/: test_assets.py  test_check_engine.py  test_config_manager.py  test_controller.py  test_device_detector.py  test_joystick_manager.py  test_performance_caches.py  test_restore_engine.py  test_software_detector.py  test_telemetry.py  test_usb_health.py  test_usb_topology.py  test_windows_util.py
tools/: generate_assets.py
