[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cockpit-guardian"
version = "0.1.0"
description = "Windows cockpit readiness guardian for simracing rigs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.6",
  "pyserial>=3.5",
]

[project.optional-dependencies]
windows = [
  "pywin32>=306; platform_system == 'Windows'",
]
dev = [
  "pytest>=8.0",
]
build = [
  "nuitka>=2.1",
  "ordered-set>=4.1",
  "zstandard>=0.22",
]

[project.scripts]
cockpit-guardian = "cockpit_guardian.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
