[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cockpit-guardian"
version = "0.1.0"
description = "Windows cockpit readiness guardian for simracing rigs."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Realistic SimCockpit / Julien Merelle" },
]
maintainers = [
  { name = "Realistic SimCockpit / Julien Merelle" },
]
keywords = [
  "simracing",
  "cockpit",
  "windows",
  "usb",
  "directinput",
  "serial",
  "com-ports",
  "simhub",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Hardware",
  "Topic :: Utilities",
]
dependencies = [
  "PySide6>=6.6",
  "pyserial>=3.5",
]

[project.optional-dependencies]
windows = [
  "pywin32>=306; platform_system == 'Windows'",
]
dev = [
  "pytest>=8.0",
]
build = [
  "nuitka>=2.1",
  "ordered-set>=4.1",
  "zstandard>=0.22",
]

[project.scripts]
cockpit-guardian = "cockpit_guardian.app:main"

[project.urls]
Homepage = "https://github.com/realisticsimcockpit/cockpit-guardian"
Repository = "https://github.com/realisticsimcockpit/cockpit-guardian"
Issues = "https://github.com/realisticsimcockpit/cockpit-guardian/issues"
Changelog = "https://github.com/realisticsimcockpit/cockpit-guardian/blob/main/CHANGELOG.md"
Documentation = "https://github.com/realisticsimcockpit/cockpit-guardian#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cockpit_guardian = ["assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
